tests/unmatched_fstr_braces/error.txt
Parse error: ./tests/unmatched_fstr_braces/unmatched_fstr_braces.fae:2
 Missing closing brace for format string sub-expression
  2|     println(f"{message")
                           ^
